src/test/ui/error-codes/E0407.stderr
error[E0407]: method `b` is not a member of trait `Foo`
  --> $DIR/E0407.rs:19:5
   |
19 |     fn b() {}
   |     ^^^^^^^^^ not a member of trait `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0407`.
